--- a/app/scripts/components/PlaygroundDetail/playground-detail-template.html
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-template.html
@@ -76,7 +76,7 @@
         </div>
       </div>
     </div>
-    <div class="column small-9">
+    <div class="column small-9 main-content">
       <article-component grid-row="row align-center" grid-column="medium-11" v-if="!loading">
         <section id="about" class="dataset-detail-section">
           <h1 class="dataset-title" v-if="selectedDataset">
