--- a/app/scripts/components/PlaygroundDetail/playground-detail-style.scss
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-style.scss
@@ -74,6 +74,12 @@
   .detail-value {
     font-size: 14px;
     word-break: break-all;
+
+    a {
+      font-weight: normal;
+      line-height: 1.71;
+      letter-spacing: normal;
+    }
   }
 
   .code-examples-header {
