--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -28,6 +28,7 @@ $font-size-large: rem(28);
 $font-size-normal: rem(18);
 $font-size-small: rem(16);
 $font-size-xsmall: rem(14);
+$font-size-xxsmall: rem(12);
 
 $font-weight-normal: 400;
 $font-weight-bold: 700;
