--- a/app/scripts/components/PlaygroundDetail/playground-detail-template.html
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-template.html
@@ -127,7 +127,7 @@
                     placement="top"
                     v-if="detail.info"
                   >
-                    <icon-component name="icon-info" class="-medium"></icon-component>
+                    <icon-component name="icon-info" class="-small"></icon-component>
                     <div class="tooltip-container" slot="popover">
                       <span class="tooltip-heading">
                         Shallow rendering
