--- a/app/scripts/components/PlaygroundDetail/playground-detail-style.scss
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-style.scss
@@ -60,14 +60,14 @@
 
   .detail-heading {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     margin-top: 10px;
     font-weight: 700;
     font-size: 14px;
 
     .detail-heading-text {
-      margin: 0 $small-margin 0 0;
+      margin: 0 ($small-margin / 2) 0 0;
     }
   }
 
