--- a/app/scripts/components/Checkbox/checkbox-style.scss
+++ b/app/scripts/components/Checkbox/checkbox-style.scss
@@ -1,3 +1,6 @@
+// Import global variables
+@import '../../../styles/variables';
+
 .c-checkbox {
   label {
     display: block;
@@ -58,6 +61,51 @@
     }
   }
 }
+
+.c-checkbox-group {
+  padding: $small-margin;
+
+  .c-checkbox {
+
+    > label {
+      color: $dark-grey;
+      font-size: $font-size-xsmall;
+
+      > span {
+        width: 16px;
+        height: 16px;
+        border: 2px solid $gold-yellow;
+        border-radius: 2px;
+
+        .c-icon {
+          > svg {
+            fill: transparent;
+          }
+        }
+
+        &:after {
+          content: none;
+        }
+      }
+    }
+
+    input[type=checkbox]:checked + label {
+      font-weight: 700;
+
+      span {
+        background-color: $gold-yellow;
+
+        .c-icon {
+          > svg {
+            fill: $theme-base;
+          }
+        }
+      }
+    }
+
+  }
+}
+
 
 .c-checkbox-group {
   > * {
