Include filters selected number

--- a/app/scripts/components/Search/search-style.scss
+++ b/app/scripts/components/Search/search-style.scss
@@ -107,6 +107,12 @@ $checkbox-color: #aea6a6;
     font-size: 1rem;
     margin-top: 14px;
   }
+
+  .number-selected {
+    color: $theme-accent;
+    font-weight: 600;
+    letter-spacing: 1px;
+  }
 }
 
 .c-tabs {
@@ -131,7 +137,7 @@ $checkbox-color: #aea6a6;
       &.is-active {
         > a {
           color: $theme-accent;
-          font-weight: 500;
+          font-weight: 600;
           border-bottom: 1px solid;
         }
       }
