--- a/app/scripts/components/PlaygroundDetail/playground-detail-template.html
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-template.html
@@ -100,7 +100,7 @@
                 <icon-component name="icon-lock" class="-medium"></icon-component>
                 <div class="tooltip-container" slot="popover">
                       <span class="tooltip-heading">
-                        Sandbox environment
+                        No sandbox environment
                       </span>
                   <p class="tooltip-content">
                     Authentication needed to query this dataset
