--- a/app/scripts/components/PlaygroundDetail/playground-detail-style.scss
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-style.scss
@@ -91,7 +91,7 @@
     .examples-link {
       display: flex;
       span {
-        margin: 0 $small-margin 0 0;
+        margin: 0 ($small-margin / 2) 0 0;
       }
     }
   }
