--- a/app/scripts/components/PlaygroundDetail/playground-detail-template.html
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-template.html
@@ -153,7 +153,7 @@
               @click="openDocs"
             >
               <span>
-                <icon-component name="icon-book" class="-xsmall"></icon-component>
+                <icon-component name="icon-book" class="-small"></icon-component>
               </span>
               Learn how to use this data
             </a>
