--- a/app/scripts/components/PlaygroundDetail/playground-detail-template.html
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-template.html
@@ -85,25 +85,19 @@
               trigger="hover"
               placement="top"
             >
-              <template v-if="selectedDataset.sandbox">
+              <template v-if="!isShallow && selectedDataset.sandbox">
                 <icon-component name="icon-unlock" class="-medium"></icon-component>
                 <div class="tooltip-container" slot="popover">
-                      <span class="tooltip-heading">
-                        Sandbox environment
-                      </span>
                   <p class="tooltip-content">
-                    No authentication needed to query this dataset
+                    No authentication needed to query this dataset.
                   </p>
                 </div>
               </template>
-              <template v-else>
+              <template v-if="!isShallow && !selectedDataset.sandbox">
                 <icon-component name="icon-lock" class="-medium"></icon-component>
                 <div class="tooltip-container" slot="popover">
-                      <span class="tooltip-heading">
-                        No sandbox environment
-                      </span>
                   <p class="tooltip-content">
-                    Authentication needed to query this dataset
+                    An API key is needed to query this dataset. Login or register to get yours - the process is simple and free.
                   </p>
                 </div>
               </template>
