--- a/app/scripts/components/Examples/examples-style.scss
+++ b/app/scripts/components/Examples/examples-style.scss
@@ -11,6 +11,7 @@
 
   .example-card {
     position: relative;
+    width: 100%;
     display: inline-block;
     border: solid 1px rgba(135, 146, 154, 0.2);
     margin-bottom: 60px;
