--- a/app/scripts/components/PlaygroundDetail/playground-detail-style.scss
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-style.scss
@@ -188,7 +188,10 @@
     }
   }
 
-  .v-popover {
+  .v-popover.sandbox {
     cursor: pointer;
+    .c-icon svg:hover {
+      fill: $theme-blue;
+    }
   }
 }
