--- a/app/scripts/components/Search/search-template.html
+++ b/app/scripts/components/Search/search-template.html
@@ -1,6 +1,6 @@
-<div class="c-search">
-  <div class="container" v-click-outside="onClickOutside">
-    <div class="input">
+<div class="c-search" >
+  <div class="container" v-click-outside="onClickOutside" >
+    <div class="input" >
       <input
         type="search"
         placeholder="Search and filter datasets"
@@ -9,38 +9,52 @@
         ref="search-input"
         v-on:click="isOpen = true"
       >
-      <icon-component :class="['search-icon', '-round', '-xsmall', { '-inverted': isOpen }]" name="icon-chevron-down"></icon-component>
-    </div>
-    <div v-if="selectedFilters.length > 0" class="c-filters">
-      <tag-component v-for="(filter, index) in selectedFilters" icon="close">
-        <span>{{filter | capitalize}}</span>
-        <button @click="() => clearSelection(filter)">
+      <icon-component :class="['search-icon', '-round', '-xsmall', { '-inverted': isOpen }]"
+                      name="icon-chevron-down" ></icon-component >
+    </div >
+    <div v-if="selectedFiltersLabels.length > 0" class="c-filters" >
+      <tag-component v-for="filter in selectedFiltersLabels" icon="close" >
+        <span >{{filter.label}}</span >
+        <button @click="() => clearSelection(filter.value)" >
           <icon-component
             name="icon-close"
             class="search-icon -round -accent -mini"
-          ></icon-component>
-        </button>
-      </tag-component>
-      <tag-component filled label="Clear filters">
-        <button @click="() => clearSelection()">
+          ></icon-component >
+        </button >
+      </tag-component >
+      <tag-component filled label="Clear filters" >
+        <button @click="() => clearSelection()" >
           Clear filters
-        </button>
-      </tag-component>
-    </div>
-    <div v-if="isOpen" class="c-tabs">
-      <tabs :options="{ useUrlFragment: false }">
-        <tab id="data-source" :name="`Data source <span class='number-selected'>${selections.dataSources}</span>`">
-          <checkbox-component :items="filters.dataSources" :initial="selectedFilters" icon="icon-check"></checkbox-component>
-        </tab>
-        <tab id="topics" :name="`Topic <span class='number-selected'>${selections.topics}</span>`">
-            <checkbox-component :items="filters.topics" :initial="selectedFilters" icon="icon-check"></checkbox-component>
-          </tab>
-        <tab id="temporal-range" :name="`Temporal range <span class='number-selected'>${selections.temporalRanges}</span>`">
-          <checkbox-component :items="filters.temporalRanges" :initial="selectedFilters" icon="icon-check"></checkbox-component>
-        </tab>
-      </tabs>
-    </div>
-  </div>
-</div>
+        </button >
+      </tag-component >
+    </div >
+    <div v-if="isOpen" class="c-tabs" >
+      <tabs :options="{ useUrlFragment: false }" >
+        <tab id="data-source" :name="`Data source <span class='number-selected'>${selections.dataSources}</span>`" >
+          <checkbox-component :items="filters.dataSources" :initial="selectedFilters"
+                              icon="icon-check" ></checkbox-component >
+        </tab >
+        <tab id="geography" :name="`Geography <span class='number-selected'>${selections.geography}</span>`" >
+          <checkbox-component :items="filters.geography" :initial="selectedFilters"
+                              icon="icon-check" ></checkbox-component >
+        </tab >
+        <tab id="topics" :name="`Topic <span class='number-selected'>${selections.topics}</span>`" >
+          <checkbox-component :items="filters.topics" :initial="selectedFilters"
+                              icon="icon-check" ></checkbox-component >
+        </tab >
+        <tab id="frequency-range"
+             :name="`Update frequency <span class='number-selected'>${selections.frequency}</span>`" >
+          <checkbox-component :items="filters.frequency" :initial="selectedFilters"
+                              icon="icon-check" ></checkbox-component >
+        </tab >
+        <tab id="sdg"
+             :name="`SDG <span class='number-selected'>${selections.sdg}</span>`" >
+          <checkbox-component :items="filters.sdg" :initial="selectedFilters"
+                              icon="icon-check" ></checkbox-component >
+        </tab >
+      </tabs >
+    </div >
+  </div >
+</div >
 
 
