Improve filter management to match API query requirements

--- a/app/scripts/components/Dataset/dataset-style.scss
+++ b/app/scripts/components/Dataset/dataset-style.scss
@@ -49,6 +49,7 @@
     font-size: rem(16);
     text-transform: uppercase;
     font-family: $base-font-family;
+    max-width: 100%;
   }
 
   .dataset-detail {
