Set max height and scroll for large filter list

--- a/app/scripts/components/Search/search-style.scss
+++ b/app/scripts/components/Search/search-style.scss
@@ -144,6 +144,11 @@ $checkbox-color: #aea6a6;
     }
   }
 
+  .tabs-component-panel {
+    max-height: 220px;
+    overflow: auto;
+  }
+
   .tabs-component-panels {
     .c-checkbox-group {
       padding: 0;
